--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,74 @@
 </div>
 
 <div class="container">
-  
+   <mat-toolbar class="toolbar">
+      <button mat-icon-button class="example-icon">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span class="example-spacer"></span>
+      <button mat-icon-button class="example-icon favorite-icon" (click)="openDialog()">
+         <mat-icon>library_add</mat-icon>
+      </button>
+    </mat-toolbar>
+  <div class="container2">
+   <div style="margin-top: 10px;">
+      <mat-form-field>
+         <mat-label>Filter</mat-label>
+         <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+       </mat-form-field>
+       
+       <div class="mat-elevation-z8">
+         <table mat-table [dataSource]="dataSource" matSort>
+       
+           <!-- ID Column -->
+           <ng-container matColumnDef="Nume">
+             <th mat-header-cell *matHeaderCellDef mat-sort-header> Nume </th>
+             <td mat-cell *matCellDef="let row"> {{row.Nume}} </td>
+           </ng-container>
+       
+           <!-- Progress Column -->
+           <ng-container matColumnDef="Prenume">
+             <th mat-header-cell *matHeaderCellDef mat-sort-header> Prenume</th>
+             <td mat-cell *matCellDef="let row"> {{row.Prenume}} </td>
+           </ng-container>
+       
+           <!-- Name Column -->
+           <ng-container matColumnDef="Echipa">
+             <th mat-header-cell *matHeaderCellDef mat-sort-header> Echipa </th>
+             <td mat-cell *matCellDef="let row"> {{row.Echipa}} </td>
+           </ng-container>
+       
+           <!-- Fruit Column -->
+           <ng-container matColumnDef="date">
+             <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
+             <td mat-cell *matCellDef="let row"> {{row.date | date}} </td>
+           </ng-container>
+
+           <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+            <td mat-cell *matCellDef="let row"> 
+               <button mat-icon-button (click)="editProduct(row)" color="white">
+                  <mat-icon>edit</mat-icon>
+               </button>
+               <button mat-icon-button (click)="deleteProduct(row.id)" color="warn">
+                  <mat-icon>delete</mat-icon>
+               </button>
+            </td>
+          </ng-container>
+       
+           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+       
+           <!-- Row shown when there is no matching data. -->
+           <tr class="mat-row" *matNoDataRow>
+             <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+           </tr>
+         </table>
+       
+         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+       </div>
+       
+   </div>
+  </div>
   
 </div>
