--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -51,6 +51,7 @@
     background-color: #00000093;
 }
 
+
 .toolbar {
     background-color: #00000093;
     position: absolute;
@@ -63,15 +64,6 @@
 .example-spacer {
     flex: 1 1 auto;
   }
-
-  table {
-    width: 100%;
-  }
-
-  .mat-mdc-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
   
 .container2{
     position: absolute;
@@ -81,5 +73,13 @@
     width: 95%;
     margin: 0 auto;
 }
-  
+
+a{
+  color: aqua;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  text-shadow: 0 0 10px aqua;
+}
 
